# python-learning

./: pyproject.toml
design patterns/creational/1.SOLID design principal/: 1.1 single_responsibility_principle.ipynb  1.2 open-closed principle.ipynb  1.3 liskov_substitution_principle.ipynb  journal.txt
notebooks/: scratch.ipynb
optimization/: linear_programming.ipynb
python-learning/: operator_overloading.ipynb  pandas_operation.ipynb  python_map.ipynb
