[tool.poetry]
name = "python-learning"
version = "0.1.0"
description = ""
authors = ["Sofia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.35"
dash = "^3.2.0"
plotly = "^6.2.0"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.65"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.solvers.dependencies]
ortools = "^9.11.4210"
pyscipopt = "^5.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
